--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -19,18 +19,11 @@ steps:
     npm install
     npm run build
   displayName: 'npm install and build'
-  
-- task: CopyFiles@2
-  inputs:
-    SourceFolder: 'build'
-    Contents: '**/*'
-    TargetFolder: '$(Build.ArtifactStagingDirectory)'''
-    CleanTargetFolder: true
 
 - task: ArchiveFiles@2
   inputs:
-    rootFolderOrFile: '$(Build.ArtifactStagingDirectory)'
-    includeRootFolder: true
+    rootFolderOrFile: 'build'
+    includeRootFolder: false
     archiveType: 'zip'
     archiveFile: '$(Build.ArtifactStagingDirectory)/build.zip'
     replaceExistingArchive: true
