--- a/package.json
+++ b/package.json
@@ -4,18 +4,27 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^3.9.3",
+    "bootstrap": "^4.3.1",
+    "husky": "^3.0.4",
+    "lint-staged": "^9.2.5",
     "material-ui": "^0.20.2",
     "origen-react-instagram-feed": "0.0.3",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
+    "prettier": "^1.18.2",
+    "react": "^16.9.0",
+    "react-bootstrap": "^1.0.0-beta.12",
+    "react-dom": "^16.9.0",
     "react-router-dom": "^5.0.0",
-    "react-scripts": "3.0.1"
+    "react-scripts": "3.0.1",
+    "react-scroll": "^1.7.14",
+    "react-scrollable-anchor": "^0.6.1",
+    "reactstrap": "^8.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "precommit": "lint-staged"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -31,5 +40,16 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "lint-staged": {
+    "src/**/*.{js,jsx,ts,tsx,json,css,scss,md}": [
+      "prettier --single-quote --write",
+      "git add"
+    ]
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
   }
 }
