--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^16.8.6",
     "react-bootstrap": "^1.0.0-beta.12",
     "react-dom": "^16.9.0",
+    "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^5.0.0",
     "react-scripts": "^3.4.0",
     "react-scroll": "^1.7.14",
