--- a/package.json
+++ b/package.json
@@ -5,14 +5,15 @@
   "dependencies": {
     "@material-ui/core": "^4.9.7",
     "bootstrap": "^4.3.1",
+    "browserslist": "^4.12.0",
+    "caniuse-lite": "^1.0.30001064",
     "eslint-plugin-flowtype": "^3.13.0",
     "fibers": "^4.0.2",
     "husky": "^3.0.4",
     "jquery": "^3.4.1",
     "lint-staged": "^9.2.5",
-    "minimist": "^1.2.5",
     "material-ui": "^0.20.2",
-
+    "minimist": "^1.2.5",
     "origen-react-instagram-feed": "0.0.3",
     "prettier": "^1.18.2",
     "react": "^16.8.6",
