--- a/package.json
+++ b/package.json
@@ -3,30 +3,30 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^4.9.7",
-    "bootstrap": "^4.3.1",
+    "@material-ui/core": "^4.10.0",
+    "bootstrap": "^4.5.0",
     "browserslist": "^4.12.0",
     "caniuse-lite": "^1.0.30001064",
     "eslint-plugin-flowtype": "^3.13.0",
-    "fibers": "^4.0.2",
-    "husky": "^3.0.4",
-    "jquery": "^3.4.1",
-    "lint-staged": "^9.2.5",
+    "fibers": "^4.0.3",
+    "husky": "^3.1.0",
+    "jquery": "^3.5.1",
+    "lint-staged": "^9.5.0",
     "material-ui": "^0.20.2",
     "minimist": "^1.2.5",
     "origen-react-instagram-feed": "0.0.3",
-    "prettier": "^1.18.2",
-    "react": "^16.8.6",
-    "react-bootstrap": "^1.0.0-beta.12",
-    "react-dom": "^16.9.0",
+    "prettier": "^1.19.1",
+    "react": "^16.13.1",
+    "react-bootstrap": "^1.0.1",
+    "react-dom": "^16.13.1",
     "react-router-bootstrap": "^0.25.0",
-    "react-router-dom": "^5.0.0",
-    "react-scripts": "^3.4.0",
-    "react-scroll": "^1.7.14",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "^3.4.1",
+    "react-scroll": "^1.7.16",
     "react-scrollable-anchor": "^0.6.1",
-    "reactstrap": "^8.0.1",
-    "sass": "^1.3.0",
-    "typescript": "^3.2.1"
+    "reactstrap": "^8.4.1",
+    "sass": "^1.26.5",
+    "typescript": "^3.9.3"
   },
   "scripts": {
     "start": "react-scripts start",
