--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "bootstrap": "^4.5.0",
     "browserslist": "^4.12.0",
     "caniuse-lite": "^1.0.30001064",
+    "eslint": "^7.3.0",
     "eslint-plugin-flowtype": "^3.13.0",
     "fibers": "^4.0.3",
     "husky": "^3.1.0",
@@ -16,7 +17,7 @@
     "minimist": "^1.2.5",
     "origen-react-instagram-feed": "0.0.3",
     "prettier": "^1.19.1",
-    "react": "^16.13.1",
+    "react": "^16.8.6",
     "react-bootstrap": "^1.0.1",
     "react-dom": "^16.13.1",
     "react-router-bootstrap": "^0.25.0",
@@ -26,7 +27,8 @@
     "react-scrollable-anchor": "^0.6.1",
     "reactstrap": "^8.4.1",
     "sass": "^1.26.5",
-    "typescript": "^3.9.3"
+    "typescript": "^3.9.3",
+    "yarn": "^1.22.4"
   },
   "scripts": {
     "start": "react-scripts start",
